@@ -225,7 +225,6 @@
 \TestPackage{setspace}
 \TestPackage{subfigure}
 \TestPackage{geometry}
-\TestPackage{linuxdoc-sgml}
 \TestPackage{longtable}
 \TestPackage{algorithm}
 \TestPackage{rotating}
