@@ -1,4 +1,4 @@
-#This file was created by <lasgoutt> Tue Sep 28 15:13:47 1999
+#This file was created by <lasgoutt> Thu Nov 18 16:34:00 1999
 #LyX 1.0 (C) 1995-1999 Matthias Ettrich and the LyX Team
 \lyxformat 2.15
 \textclass article
@@ -1184,43 +1184,6 @@ default
  means that your LaTeX installation provides a sensible value for this parameter.
 \end_float 
 .
-\layout Subsection
-
-linuxdoc-sgml
-\layout Description
-
-Found: @chk_linuxdoc-sgml@
-\layout Description
-
-CTAN: N/A
-\layout Description
-
-Notes: The package 
-\family sans 
-graphics
-\family default 
- is needed by LaTeX to process files generated by the 
-\family sans 
-sgml-tools
-\family default 
- set of programs (see above).
- If you see 
-\begin_inset Quotes eld
-\end_inset 
-
-no
-\begin_inset Quotes erd
-\end_inset 
-
- here whereas you now that you have
-\family sans 
- sgml-tools
-\family default 
- installed you probably forgot to install correctly the file 
-\family typewriter 
-linuxdoc-sgml.sty
-\family default 
- in some place where LaTeX can find it.
 \layout Subsection
 
 rotating
